--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,36 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  <build>
+		<pluginManagement>
+			<plugins>				
+				<plugin>
+			        <artifactId>maven-surefire-plugin</artifactId>
+			        <version>2.19.1</version>
+			        <executions>
+			          <execution>
+			            <id>default-test</id>
+			            <phase>test</phase>
+			            <goals>
+			              <goal>test</goal>
+			            </goals>
+			            <configuration>
+			              <skipTests>false</skipTests>
+			              <systemProperties>
+			                <java.io.tmpdir>.\target</java.io.tmpdir>
+			              </systemProperties>
+			            </configuration>
+			          </execution>
+			        </executions>
+			        <configuration>
+			          <skipTests>false</skipTests>
+			          <systemProperties>
+			            <java.io.tmpdir>.\target</java.io.tmpdir>
+			          </systemProperties>
+			        </configuration>
+			     </plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
